# padoc

./: .gitlab-ci.yml  README.md  docker-compose.yml  nginx.conf
AIot/padoc/: .gitignore  CMakeLists.txt  README.md  qml.qrc.in  resource.qrc.in
AIot/padoc/cmake/: AutoQrc.cmake  AutoResourceQrc.cmake
AIot/padoc/qml/: Main.qml
AIot/padoc/qml/components/: BorderButton.qml  HBarChart.qml  HorizontalBarChart.qml  MicButton.qml  RadarChart.qml  SideBar.qml  SolidButton.qml
AIot/padoc/qml/screens/: MainScreen.qml
AIot/padoc/qml/screens/diagnosis/: CheckList.qml  DiagnosisLoading.qml  DiagnosisMain.qml  DiagnosisResult.qml  NoticeLaw.qml  NoticeSettings.qml  VoiceTest1.qml  VoiceTest2.qml  VoiceTesting1.qml  VoiceTesting2.qml
AIot/padoc/qml/screens/training/: AdvancedTraining11.qml  AdvancedTraining12.qml  (+14 more)
AIot/padoc/src/: main.cpp
AIot/padoc/src/ai/: ai_utils.cpp  ai_utils.h  requirements.txt  voice_predict.py
AIot/padoc/src/audio/: audio_controller.cpp  audio_controller.h  dbprocessor.h  waveformprocessor.h  xyseriesiodevice.cpp  xyseriesiodevice.h
AIot/padoc/src/audiorecord/: AudioRecorder.cpp  AudioRecorder.h
AIot/padoc/src/backend/: audioupload.cpp  audioupload.h  loginmanager.cpp  loginmanager.h  scoresend.cpp  scoresend.h
AIot/padoc/src/praat/: analyze_voice.py  voiceanalyzer.cpp  voiceanalyzer.h
AIot/padoc/src/score1/: scorecalculator.cpp  scorecalculator.h
AIot/padoc/src/ultrasound/: esp32_ultrasound_control.py  ultrasoundcontroller.cpp  ultrasoundcontroller.h
AIot/padoc/src/viewmodels/: RadarChartViewModel.cpp  RadarChartViewModel.h
(+209 files in other folders)
